Geometry Nodes PointScale node not working #87597

Closed
opened 2021-04-18 16:20:07 +02:00 by Everton Schneider · 12 comments

System Information
Operating system: Linux-5.8.0-50-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-18 07:51, hash: 76eae59648
Caused by 5cf6f570c6

Short description of error
When trying to connect the point scale node in the node tree the instances disappear.

Exact steps for others to reproduce the error
Just open the attached file and put the point scale node in the line and the instances will disappear.

PointScale.blend

**System Information** Operating system: Linux-5.8.0-50-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-18 07:51, hash: `76eae59648` Caused by 5cf6f570c6 **Short description of error** When trying to connect the point scale node in the node tree the instances disappear. **Exact steps for others to reproduce the error** Just open the attached file and put the point scale node in the line and the instances will disappear. [PointScale.blend](https://archive.blender.org/developer/F9959749/PointScale.blend)

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

ezgif.com-gif-maker.gif

![ezgif.com-gif-maker.gif](https://archive.blender.org/developer/F9959833/ezgif.com-gif-maker.gif)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will bisect.

Can confirm, will bisect.
Member

Caused by 5cf6f570c6

Caused by 5cf6f570c6
Hans Goudey self-assigned this 2021-04-19 20:05:45 +02:00

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann

I can get point scale node working by feeding the node with a minimum value of 1. This way the point scale works again. Is this a real bug or the "design wherever it's called..." work this way now? Before we were able to use point scale directly with no need to give the node a starting point of 1. Now using only the point scale alone it assumes the scale starting point as 0 making the instances "disappear" and not allowing the scale to be increased.

Screenshot from 2021-04-22 10-37-46.png

I can get point scale node working by feeding the node with a minimum value of 1. This way the point scale works again. Is this a real bug or the "design wherever it's called..." work this way now? Before we were able to use point scale directly with no need to give the node a starting point of 1. Now using only the point scale alone it assumes the scale starting point as 0 making the instances "disappear" and not allowing the scale to be increased. ![Screenshot from 2021-04-22 10-37-46.png](https://archive.blender.org/developer/F10032586/Screenshot_from_2021-04-22_10-37-46.png)
Member

Yes, it's supposed to use a default value of 1. I'll commit a fix in a moment.

Yes, it's supposed to use a default value of 1. I'll commit a fix in a moment.

This issue was referenced by d1ccc5b969

This issue was referenced by d1ccc5b9694b7c737158f4d4bd83ae780b32d258
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

I can confirm that it's working fine again! Thanks team for making blender useful and stable every day! It's amazing the quality of the support, I feel the love and the care of you over this amazing software and the community, thank you all!

I can confirm that it's working fine again! Thanks team for making blender useful and stable every day! It's amazing the quality of the support, I feel the love and the care of you over this amazing software and the community, thank you all!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87597
No description provided.